<resources>
    <string name="app_name">FoodNow - Restaurant Reviewer</string>
    <string name="login_message">Please log in or sign up below</string>
    <string name="name">Name</string>
    <string name="firstName">First name</string>
    <string name="password">Password</string>
    <string name="logo_pic">Logo picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="guest">Guest</string>
    <string name="reviews">Reviews</string>
    <string name="restaurant_picture">Restaurant picture</string>
    <string name="restaurant_name">Dummy data - restaurant in Swansea</string>
    <string name="search">Search</string>
    <string name="logout">Log Out</string>
    <string name="yourReviews">Your Reviews</string>
    <string name="myReviews">My Reviews</string>
    <string name="restaurantList">Restaurant List</string>
    <string name="addReview">Add Review</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="restaurantLocation">Restaurant Location</string>
    <string name="attach">Attach photos</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="wrongEmailFormat">Please check your email format.</string>
    <string name="passNoMatch">Passwords are not matching.</string>
    <string name="nameLimitExceeded">Username needs to be between
        4 and 10 characters long.</string>
    <string name="emptyField">Some of the text fields are empty.</string>
    <string name="passLengthErr">Password needs to be longer than 6 characters.</string>
    <string name="incorrectCredentials">Incorrect password and/or email.</string>
    <string name="username">Username</string>
    <string name="emailExists">Email is already used.</string>
    <string name="settings">Settings</string>
    <string name="noStars">Please select the rating using stars.</string>
    <string name="remove">Remove</string>
    <string name="deleteConfirm">Delete review</string>
    <string name="editReview">Edit review</string>
    <string name="deleteConfirm2">Do you want do delete this review?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="greeting2">How are you today?</string>
    <string name="greeting">Hi!</string>
</resources>