<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/restaurantsDrawer"
            android:icon="@drawable/ic_list"
            android:title="@string/restaurantList" />
        <item
            android:id="@+id/myReviewsDrawer"
            android:icon="@drawable/ic_comment"
            android:title="@string/myReviews" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsDrawer"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/logoutDrawer"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>